--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff;" >
+<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff" >
   <!-- Brand -->
 <!--   <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a>  -->
 
@@ -53,10 +53,7 @@
 
 <!-- self intro -->
 
-<div id="fix">
-</div>
-
-<!-- <div id="selfIntro" class="brightcolor">
+<div id="selfIntro" class="brightcolor">
   <div class="row">
     <div class="col-sm-2">
     </div>
@@ -72,12 +69,28 @@
     </div>
 
   </div>
-</div> -->
+</div>
 
 
 
 
+<div class="brightcolor" style="visibility: hidden;">
+  <div class="row">
+    <div class="col-sm-2">
+    </div>
 
+    <div class="col-sm-8">
+      <div class="jumbotron" style="background-color : #74b9ff; color: white">
+        <h1 class="display-3" style="font-size: 40px;">Hello, I'm Sherry, a multidiciplinary designer</h1>
+        <p>For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
+      </div>
+    </div>
+
+    <div class="col-sm-2">
+    </div>
+
+  </div>
+</div>
 
 
 <!-- project card -->
