--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 </nav>
 
 <!-- self intro -->
-<div id="selfIntro" class="selfIntroAbout">
+<div id="selfIntroAbout" class="selfIntroAbout" style="position: relative;top: 50px; z-index: -1;">
   <div class="row">
     <div class="col-sm-2">
     </div>
