--- a/about.html
+++ b/about.html
@@ -54,12 +54,27 @@
 
     <div class="col-sm-8">
       <div class="jumbotron">
-        <h1 class="display-3" style="font-size: 40px; padding-bottom: 50px">Hello,</h1>
-        <p>I'm Sherry, a multidiciplinary designer. For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
+        <h1 class="display-3" style="font-size: 40px; padding-bottom: 20px">Hello,</h1>
+        <hr>
+        <h5 style="margin-top: 40px;"">I am a designer passionate about a lot of things. </h5>
+        <p style="margin-bottom: 40px">I learned architecture at school. I have been working as a graphic designer, a web designer, a museum docent, a videographer, and a UI/UX designer.</p>
+        <hr>
 
-        <p>My interest in design begins with my fascination with architecture. During the design phase, I learn to consider how people feel and interact with the space. I became more and more interested in this concept of user-centered interaction and design, and I use the design skills I learned in college to develop UI and UX projects, as it combines my love for tech, art, and people.</p> 
+        <h5 style="margin-top: 40px;"">Started with architecutre, I learned to think about design critically. </h5>
+        <p style="margin-bottom: 40px">Besides all the technical and visual design skills, an important thing a I learned from architecture is the design thinking process. From developing projects from start to end, I learned how to clarify the goal at the beginning, identify the problems during the process, and how to make decisions to push forward. </p>
+        <hr>
 
-        <a href="https://www.linkedin.com/in/sherry-li-062447b2/"><img class="img-fluid" src="image/about/1.png" style="width: 30px; margin-top: 50px"></a>
+        <h5 style="margin-top: 40px;"">UX as my new passion. </h5>
+        <p style="margin-bottom: 40px">What leads me to become interested in UX is my last summer intern experience. It broadened my understanding of design: it is not just what it looks like, it is the mechanism to make it work and the empathy to think for people. Through projects with real clients, I practiced design as a method, and space as a medium to influence the way people live, work, eat and interact with each other.</p>
+        <hr>
+
+
+        <h5 style="margin-top: 40px;">Always willing to learn. </h5>
+        <p style="margin-bottom: 40px">With curiosity and passion for the field of technology, I self-learned HTML, CSS, javascript, and python. I have made websites and some front-end prototypes from scratch. When I began to do some UI projects, the coding background enables me to better understand how art and technology come together. </p>
+        <hr>
+        
+
+        <p style="margin-top: 40px;"> In conclusion, I want to become a thoughtful and considerate designer, who is willing to listen to people's need, prompt to find ways to solve problems, and enthusiastic to make an impact.</p>
 
       </div>
       
@@ -75,7 +90,7 @@
 
 
 <!-- footer -->
-    <footer class="footer">
+<!--     <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -85,7 +100,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
 
 
