--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,10 @@
 
 <!-- contact -->
 <div class="container" id="contact">
-    <h5>Email address: nachuan@wustl.edu</h5>
+    <p>Say Hi</p>
+    <p>nachuan@wustl.edu</p>
+    <a href="https://www.linkedin.com/in/sherry-li-062447b2/"><img class="img-fluid" src="image/about/1.png" style="width: 25px"></a>
+
 </div>
 
 
@@ -60,7 +63,7 @@
 
 
 <!-- footer -->
-<footer class="footer">
+<!-- <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -70,7 +73,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
 
 
