--- a/fuzhou.html
+++ b/fuzhou.html
@@ -9,13 +9,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
 
 
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbarp">
   <!-- Brand -->
 
   <!-- Toggler/collapsibe Button -->
@@ -68,40 +69,48 @@
 
 <div class="content">
 
-    <p style="color: #9E9E9E">Tools: Proto.io, Illustrator</p>
+    <p style="color: #9E9E9E">Tools: Sketch, Illustrator, Proto.io</p>
     <p style="color: #9E9E9E">Teammate: Tianlei Zheng, Yihong Chen</p>
 
     <p class="intro">
-      The motivation behind this project is to protect ancient dialects in China. While more and more people speak Mandarin, a lot of the dialects are disappearing local cultures.
+      The motivation behind this project is <strong>to protect ancient dialects in China.</strong> While more and more people speak Mandarin, a lot of the dialects are disappearing local cultures.
     </p>
     <hr>
 
+
     <h4><strong>Fuzhou</strong> is a online dictionary designed for the dialect in Fuzhou, China.</h4>
-    <p>I lived in a city called "Fuzhou" and we have a beautiful dialect since 1400 years ago. While less and less people know how to speak it, two of my engineer friends in high school developed a website as an online dictionary for our dialect. I joined the team in October 2018 to help them redesign the user interface and experience.</p>
+    <p>I lived in a city called "Fuzhou" and we have a beautiful dialect since 1400 years ago. While less and less people know how to speak it, two of my engineer friends in high school developed a website as an online dictionary for our dialect. <strong>I joined the team in October 2018 to help them redesign the user interface and experience.</strong></p>
 
 
     <img src="image/fuzhou/33.png" class="img-fluid" alt="Responsive image">
 
+    <div id="highlight">
+    <h4>Content</h4>
+    <ul>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="fuzhou.html#myrole">My role</a></li>
+      <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>Sole Designer</li>
+          </ul>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="fuzhou.html#research">Research</a></li>
+      <li><a href="fuzhou.html#ui">User Interface</a></li>
+          <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>Redesign Website</li>
+            <li>Responsive Design</li>
+            <li>Wechat Blogs</li>
+          </ul>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="fuzhou.html#insight">Insight</a></li>
+          <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>Systematic Learning Platform</li>
+          </ul>
+        </ul>
+      
+    <hr style="margin-top: 50px">
+    </div>
 
-    <h4 style="color: grey">Content</h4>
-    <ul style="color: grey">
-      <li>My role</li>
-      <li>Research</li>
-      <li>UI Design</li>
-      <ul style="padding: 0 0 0 0; margin-left: 30px"> 
-          <li>Redesign Website</li>
-          <li>Responsive Design</li>
-          <li>Wechat Blogs</li>
-        </ul>
-      <li>Next</li>
-        <ul style="padding: 0 0 0 0; margin-left: 30px"> 
-          <li>Systematic Learning Platform</li>
-        </ul>
-    </ul>
 
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhouwhite">
+<div class="jumbotron jumbotron-fluid fuzhouwhite" id="myrole">
   <div class="container">
     <h1 class="display-5">My role</h1>
     <hr>
@@ -117,7 +126,7 @@
 
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhouwhite">
+<div class="jumbotron jumbotron-fluid fuzhouwhite" id="research">
   <div class="container">
     <p class="lead">Research</p>
     <h1 class="display-5">Understand the Development of Fuzhou Dialect.</h1>
@@ -211,7 +220,7 @@
     <hr>
 </div>
 
-<div class="jumbotron jumbotron-fluid fuzhouwhite">
+<div class="jumbotron jumbotron-fluid fuzhouwhite" id="ui">
   <div class="container">
     <p class="lead">UI Design</p>
     <h1 class="display-5">Redesign Website</h1>
@@ -374,7 +383,7 @@
 
     </div>
 
-<div class="jumbotron jumbotron-fluid fuzhouwhite">
+<div class="jumbotron jumbotron-fluid fuzhouwhite" id="insight">
   <div class="container">
     <h1 class="display-5">Insights and Moving Forward.</h1>
     <hr>
@@ -396,7 +405,7 @@
   <p>Everyone in the team are just college students. I was a little hesitated to start at the beginning as there is no one profenssional in our team. While I realize if you want to do something, instead of worring about limits, you should just take the actions to start.</p>
 
   <p>
-    We started from ideas and thoughts, and we are still on our way to protect the things we treassure in our hometown.
+    <strong> We started from ideas and thoughts, and we are still on our way to protect the things we treassure in our hometown. </strong>
   </p>
 </div>
 
@@ -463,7 +472,7 @@
     <div class="card-body">
       <h4 class="card-title">Journey</h4>
       <p class="card-text">A app designed for travellers to record and share their journey.</p>
-      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p style="padding-top: 22px"> <small>UX . Prototype . Visual System</small></p>
     </div>
     <div class="card-footer">
       <a href="journey.html" class="card-link">Read more</a>
@@ -475,7 +484,7 @@
     <div class="card-body">
       <h4 class="card-title">Foodly</h4>
       <p class="card-text">A app encouraging people to live healthier through eating nutritious food.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p> <small>Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer">
       <a href="life.html" class="card-link">Read more</a>
@@ -487,7 +496,7 @@
     <div class="card-body">
       <h4 class="card-title">Split</h4>
       <p class="card-text">A visualized calculator for spliting bills.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p style="padding-top: 22px"> <small>Research . Design Thinking . Development</small></p>
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
@@ -500,7 +509,7 @@
     <div class="card-body">
       <h4 class="card-title">Uber</h4>
       <p class="card-text">Redesign UI for multiple destinations.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+      <p> <small>UX . Design Thinking</small></p>
     </div>
     <div class="card-footer">
       <a href="uber.html" class="card-link">Read more</a>
@@ -511,7 +520,6 @@
     <div class="card-body">
       <h4 class="card-title">Split</h4>
       <p class="card-text">A visualized calculator for spliting bills.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
@@ -540,6 +548,7 @@
 <footer class="footer">
 
       <nav class="nav">
+        <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
         <a class="nav-link" href="design.html">Projects</a>
         <a class="nav-link" href="resume.html">Resume</a>
