--- a/index.html
+++ b/index.html
@@ -54,21 +54,16 @@
 <!-- self intro -->
 
 <div id="selfIntro" class="brightcolor">
-  <div class="row">
-    <div class="col-sm-2">
-    </div>
 
-    <div class="col-sm-8">
-      <div class="jumbotron" style="background-color : #74b9ff; color: white">
-        <h1 class="display-3" style="font-size: 40px;">Hello, I'm Sherry, a multidiciplinary designer</h1>
-        <p>For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
+
+      <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; width: 80%">
+        <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a multidiciplinary designer</h1>
+        <p style="margin-top: 20px; font-size: 20px">to think from different perspectives | to design for users | to combine creativity and rationality <span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
       </div>
-    </div>
 
-    <div class="col-sm-2">
-    </div>
 
-  </div>
+
+
 </div>
 
 
@@ -109,7 +104,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
       <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
-      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p> <small>UX . Prototype . Visual System</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -123,7 +118,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
       <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p> <small>Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -137,7 +132,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
       <p class="card-text" style="color: black">A website designed to preserve the dialect in Fuzhou, China.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p> <small>Research . UI . Prototype</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -156,7 +151,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Split</h4>
       <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
-      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p> <small>Research . Design Thinking . Development</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -170,7 +165,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Uber</h4>
       <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
-      <p> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+      <p> <small>UX . Design Thinking</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -351,7 +346,7 @@
 
 
 <!-- footer -->
-    <footer class="footer">
+<!--     <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -361,7 +356,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
 
 
