--- a/interior.html
+++ b/interior.html
@@ -117,7 +117,7 @@
 
 
 <!-- footer -->
-<footer class="footer">
+<!-- <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -127,7 +127,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
 
     <!-- Optional JavaScript -->
