--- a/journey.html
+++ b/journey.html
@@ -9,13 +9,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
 
 
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+
+
+<nav class="navbar navbar-expand-md navbar-darkt" id="navbarp">
   <!-- Brand -->
 
   <!-- Toggler/collapsibe Button -->
@@ -68,16 +71,42 @@
 
 <div class="content">
 
-    <p style="color: #9E9E9E">A Personal Project | Tools: Proto.io, html, css, javascript, jQuery</p>
+    <p style="color: #9E9E9E">A Personal Project | Tools: Sketch, Proto.io, html, css, javascript, jQuery</p>
 
     <p class="intro">
-      “Traveling – it leaves you speechless, then turns you into a storyteller.” During our journey, we all have special memories and stories that we want to tell and share. On one hand, we want to immerse ourselves in the environment and engage with the people we meet; on the other hand, we want to capture those moments and share them with others later. I begin to wonder how might we create a smooth user experience to record the journey and share it with other travelers with the same interests.
+      “Traveling – it leaves you speechless, then turns you into a storyteller.” During our journey, we all have special memories and stories that we want to tell and share. On one hand, we want to immerse ourselves in the environment and engage with the people we meet; on the other hand, we want to capture those moments and share them with others later. I begin to wonder <strong>how might we create a smooth experience for users to record the journey and share it with other travelers.</strong>
     </p>
     <hr>
 
+    <div id="highlight">
+    <h4>Content</h4>
+    <ul>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="journey.html#ideation">Ideation</a></li>
+      <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>Start by asking questions</li>
+            <li>Mapping User Experience</li>
+          </ul>
+      <li><a href="journey.html#research">Research</a></li>
+      <li><a href="journey.html#persona">Persona</a></li>
+      <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>College Student</li>
+            <li>Designer</li>
+            <li>Camp Lover</li>
+          </ul>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="journey.html#prototype">Prototype</a></li>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="journey.html#ui">User Interface</a></li>
+      <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>Timeline for recording</li>
+            <li>Discover your interests</li>
+            <li>Post your journey</li>
+          </ul>
+      <li><a href="journey.html#insight">Insight</a></li>
+    </ul>
+    </div>
+
 </div>
 
-<div class="jumbotron jumbotron-fluid journey">
+<div class="jumbotron jumbotron-fluid journey" id="ideation">
   <div class="container">
     <p class="lead">Design Challenge</p>
     <h1 class="display-5">How might we make a recording and experience sharing platform for travellers?</h1>
@@ -91,12 +120,12 @@
     <h4>Start by asking questions.</h4>
 
     <p>
-      The design process starts with the question that how can I smoothly combine the function of recording and sharing the traveling experience. For the recording part, I want to make it feel like a personal diary for each traveler. For the sharing platform, I want to make it an active community where people easily find the travelers who share similar interests and learn about their stories.
+      The design process starts with the question that <strong>how can I smoothly combine the function of recording and sharing the traveling experience.</strong> For the recording part, I want to make it feel like a personal diary for each traveler. For the sharing platform, I want to make it an active community where people easily find the travelers who share similar interests and learn about their stories.
     </p>
 
     <div class="row goals" style="margin-top: 50px; margin-bottom: 50px">
       <div class="col-md-6">
-        <p style="margin-left: 5%;">About recording:</p>
+        <p style="margin-left: 5%;"><strong>About recording:</strong></p>
         <ul>
           <li>How might we make user interface easy for inputs?</li>
           <li>How might we make users feel personal for the recording part?</li>
@@ -104,7 +133,7 @@
         </ul>
       </div>
       <div class="col-md-6">
-        <p style="margin-left: 5%;">About sharing:</p>
+        <p style="margin-left: 5%;"><strong>About sharing:</strong></p>
         <ul>
           <li>How can this app be designed to be distinguished from other social apps?</li>
           <li>How might we create smooth user experince?</li>
@@ -120,13 +149,14 @@
     </div>
     <hr>
 
-    <h4>Research</h4>
+    <h4 id="research">Research</h4>
     <p>
       I conduct research on existing traveling and social apps. Some popular traveling apps focus on locations (restaurants/hotels/sightseeing). People can give ratings, leave comments and use the ranking to help them decide where to visit.While on one hand, as data accumulates, the average rating becomes more and more reliable; on the other hand, it becomes more generalized and less personal: “top 3 things to do in Florence”, “top 10 restaurants you can’t miss”...
     </p>
 
     <p>
-      I want to apply the user-center concept of social apps to create a traveling specific sharing platform. Instead of focusing on rating and ranking, I want to focus on users and treat each of them as a unique traveler.
+      
+      I want to apply the user-center concept of social apps to create a traveling specific sharing platform. <strong>Instead of focusing on rating and ranking, I want to focus on users and treat each of them as a unique traveler. </strong>
     </p>
 
     <div id="carouselExampleIndicators" class="carousel slide dark" data-ride="carousel">
@@ -157,7 +187,7 @@
     </div>
     <hr>
 
-    <h4>Targeting Specific User Groups</h4>
+    <h4 id="persona">Targeting Specific User Groups</h4>
     <p>
       I began exploring the ways in which particular groups of people can use Journey. I envisioned three types of travelers as potential users and created a persona within each context.
     </p>
@@ -199,10 +229,10 @@
 </div>
 
 
-<img class="img-fluid" src="image/journey/36.png">
+<img class="img-fluid" src="image/journey/36.png" id="prototype">
 
 
-<div class="content">
+<div class="content" >
 
     <h4>Journey is an user-centered app that aims to create a seamless experience for travelers to record, customize and share their trips with others.</h4>
     <p>
@@ -223,9 +253,9 @@
 
 <div class="content">
 
-    <h4>Architecure</h4>
+    <h4>Architecture</h4>
     <p>
-      After getting the permission to access locations and photos on mobile devices, the app automatically creates a timeline for the journey. It acts as a personal diary to record locations, photos and thoughts, which can only be viewed by the user. If the user wants to share it with others, he/she can choose to create a post on the timeline. The post uses the format of the blog by introducing more text. The sharing platform encourages people to find other travelers who share similar interests with them.
+      After getting the permission to access locations and photos on mobile devices, the app automatically creates a timeline for the journey. <strong>It acts as a personal diary to record locations, photos and thoughts,</strong> which can only be viewed by the user. If the user wants to share it with others, he/she can choose to create a post on the timeline. The post uses the format of the blog by introducing more text. <strong>The sharing platform encourages people to find other travelers who share similar interests with them.</strong>
     </p>
     <div class="container">
       <img src="image/journey/31.png" class="img-fluid" alt="Responsive image">
@@ -233,9 +263,9 @@
     <hr>
     
 
-    <h4>UI Design</h4>
+    <h4 id="ui">UI Design</h4>
     <p>
-      I began to develop and build several prototypes. After testing multiple iterations of my ideas with users, I finalized UI design. It has different tabs for users to record personal timeline, to share their posts, to find and follow other travelers, and to easily communicate in messages.
+      I began to develop and build several prototypes. After testing multiple iterations of my ideas with users, I finalized UI design. It has different tabs for users <strong>to record personal timeline, to share their posts, to find and follow other travelers, and to easily communicate in messages.</strong>
     </p>
     <a href="https://pr.to/H7OGZT/" target="_blank" class="link">Proto.io Prototype</a>
     <a href="https://nachuan99.github.io/App/" target="_blank" class="link">Front End Prototype</a>
@@ -289,7 +319,7 @@
 
 </div>
 
-<div class="jumbotron jumbotron-fluid journey">
+<div class="jumbotron jumbotron-fluid journey" id="insight">
   <div class="container">
     <h1 class="display-5">Insights and Moving Forward</h1>
   </div>
@@ -297,7 +327,7 @@
 
 
 
-<div class="content">
+<div class="content" >
 
   <h4>Travelling is a process of creating memory.</h4>
   <p>Through interviewing travelers, brainstorming and designing the app, I realize people always have precious memories during their journey, either with their families, friends, or someone they just met. The app acts as a diary, as an album and as a storybook to store those beautiful moments. It also provides a platform for people to share them with others. </p>
@@ -306,7 +336,7 @@
 <div class="content">
 
   <h4>More to explore. </h4>
-  <p>Travelling is about enjoying the process. For me, designing this app is also a great process for me. I learned how to develop a concept from the beginning, how to think in a user's perspective and how to use design to reach the goal. Both travelling and learning never ends, as:
+  <p>Travelling is about enjoying the process. For me, designing this app is also a great process for me. <strong>I learned how to develop a concept from the beginning, how to think in a user's perspective and how to use design to reach the goal.</strong> Both travelling and learning never ends, as:
   </p>
 
   <div class="container" style="margin-top: 50px">
@@ -332,7 +362,7 @@
     <div class="card-body">
       <h4 class="card-title">Foodly</h4>
       <p class="card-text">A app encouraging people to live healthier through eating nutritious food.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p> <small>Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer">
       <a href="life.html" class="card-link">Read more</a>
@@ -343,7 +373,7 @@
     <div class="card-body">
       <h4 class="card-title">Fuzhou</h4>
       <p class="card-text">A website designed to preserve the dialect in Fuzhou, China.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p style="padding-top: 22px"> <small>Research . UI . Prototype</small></p>
     </div>
     <div class="card-footer">
       <a href="fuzhou.html" class="card-link">Read more</a>
@@ -354,7 +384,7 @@
     <div class="card-body">
       <h4 class="card-title">Split</h4>
       <p class="card-text">A visualized calculator for spliting bills.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p style="padding-top: 22px"> <small>Research . Design Thinking . Development</small></p>
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
@@ -368,7 +398,7 @@
     <div class="card-body">
       <h4 class="card-title">Uber</h4>
       <p class="card-text">Redesign UI for multiple destinations.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+      <p> <small>UX . Design Thinking</small></p>
     </div>
     <div class="card-footer">
       <a href="uber.html" class="card-link">Read more</a>
@@ -379,7 +409,6 @@
     <div class="card-body">
       <h4 class="card-title">Split</h4>
       <p class="card-text">A visualized calculator for spliting bills.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
@@ -409,6 +438,7 @@
 <footer class="footer">
 
       <nav class="nav">
+        <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
         <a class="nav-link" href="design.html">Projects</a>
         <a class="nav-link" href="resume.html">Resume</a>
