--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
 
 
 <!-- footer -->
-<footer class="footer">
+<!-- <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -70,7 +70,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
 
 
