--- a/architecture.html
+++ b/architecture.html
@@ -166,7 +166,7 @@
 
 
 <!-- footer -->
-    <footer class="footer">
+<!--     <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -176,7 +176,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
