--- a/art.html
+++ b/art.html
@@ -169,7 +169,7 @@
 
 
 <!-- footer -->
-<footer class="footer">
+<!-- <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -179,7 +179,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
 
     <!-- Optional JavaScript -->
