--- a/design.html
+++ b/design.html
@@ -82,7 +82,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
       <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
-      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p> <small>UX . Prototype . Visual System</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -96,7 +96,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
       <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p> <small>Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -110,7 +110,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
       <p class="card-text" style="color: black">A website designed to preserve the dialect in Fuzhou, China.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p> <small>Research . UI . Prototype</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -129,7 +129,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Split</h4>
       <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
-      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p> <small>Research . Design Thinking . Development</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -143,7 +143,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Uber</h4>
       <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
-      <p> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+      <p> <small>UX . Design Thinking</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -165,7 +165,7 @@
 </div>
 
 <!-- footer -->
-<footer class="footer">
+<!-- <footer class="footer">
 
       <nav class="nav">
         <a class="nav-link" href="about.html">About</a>
@@ -175,7 +175,7 @@
       </nav>
 
 
-    </footer>
+    </footer> -->
 
 
     <!-- Optional JavaScript -->
