--- a/opartments.html
+++ b/opartments.html
@@ -15,7 +15,7 @@
 
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbarp">
   <!-- Brand -->
 
   <!-- Toggler/collapsibe Button -->
@@ -109,6 +109,7 @@
 <footer class="footer">
 
       <nav class="nav">
+        <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
         <a class="nav-link" href="design.html">Projects</a>
         <a class="nav-link" href="resume.html">Resume</a>
