--- a/split.html
+++ b/split.html
@@ -9,13 +9,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
 
 
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbarp">
   <!-- Brand -->
 
   <!-- Toggler/collapsibe Button -->
@@ -68,18 +69,38 @@
 
 <div class="content">
 
-    <p style="color: #9E9E9E">A Personal Project | Tools: Proto.io, html, css, javascript, jQuery</p>
+    <p style="color: #9E9E9E">A Personal Project | Tools: Sketch, Proto.io, html, css, javascript, jQuery</p>
     
     <p class="intro">
-      A calculator acts as a straightforward tool to help people solve math problems. While even with the help of a calculator, splitting bills is sometimes still a complicated process when there are many people and items involved.
+      A calculator acts as a straightforward tool to help people solve math problems. While even with the help of a calculator, splitting bills is sometimes still a complicated process when there are many people and items involved. <strong>How might we design an app to simplify the process of splitting?</strong>
     </p>
+
     <div class="container">
       <img src="image/split/3.jpg" class="img-fluid" alt="Responsive image">
     </div>
+
     <hr>
 
+    <div id="highlight">
+    <h4>Content</h4>
+    <ul>
+      <li><a href="split.html#ideation">Ideation</a></li>
+      <li><a href="split.html#persona">Persona</a></li>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="split.html#research">Experiment</a></li>
+      <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>Conducting research and experiments on existing apps</li>
+          </ul>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="split.html#prototype">Prototype</a></li>
+      <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="split.html#development">Development</a></li>
+      <ul style="padding: 0 0 0 0; margin-left: 30px; color: grey"> 
+            <li>Coding in html, css and javascript</li>
+          </ul>
+      <li><a href="split.html#insight">Insight</a></li>
+    </ul>
+    <hr style="margin-top: 50px">
+    </div>
 
-    <h4>Design Process</h4>
+    <h4 id="ideation">Design Process</h4>
     <p>
       The concept focuses on not only making the app a useful math tool but also visualizing the process in a way that can be easily understood. It is also important to simplify the process to create a smooth user experience.
     </p>
@@ -93,7 +114,7 @@
     </div>
     <hr>
 
-    <h4>StoryBoard</h4>
+    <h4 id="persona">StoryBoard</h4>
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -116,8 +137,8 @@
     </div>
      <hr>
 
-    <h4>Experiments</h4>
-    <p>Continuing the scenario in the storyboard, I proposed a math problem for experiment. I test with different existing apps to analyze the process for users.</p>
+    <h4 id="research">Experiments</h4>
+    <p>Continuing the scenario in the storyboard, I proposed a math problem for experiment. <strong>I test with different existing apps to analyze the process for users.</strong></p>
     <div class="container">
       <img class="img-fluid" src="image/split/21.png">
     </div>
@@ -139,7 +160,7 @@
 </div>
 
 
-<img class="img-fluid" src="image/split/19.png">
+<img class="img-fluid" src="image/split/19.png" id="prototype">
 
 
 <div class="content">
@@ -152,7 +173,7 @@
 
     <h4>Easy as 1. 2. 3</h4>
     <p>
-      The user interface is divided into three simple steps: choosing how many people, adding items (by taking a photo or manually), and showing results. Without the steps for creating an account and signing in, the user flow is simplified, which makes it practical and easy to use.
+      The user interface is divided into three simple steps: <strong>choosing how many people, adding items (by taking a photo or manually), and showing results.</strong> Without the steps for creating an account and signing in, the user flow is simplified, which makes it practical and easy to use.
     </p>
     <div class="container" style="padding-top: 40px">
       <div class="row">
@@ -187,7 +208,7 @@
     </div>
     <hr>
 
-    <div class="container gifLarge">
+    <div class="container gifLarge" id="development">
       <h4>Development</h4>
     <p>
       After self learning some coding skills, I begin to push from prototyping to developing in HTML, CSS and Javascript.
@@ -214,7 +235,7 @@
 
 </div>
 
-<div class="jumbotron jumbotron-fluid split">
+<div class="jumbotron jumbotron-fluid split" id="insight">
   <div class="container">
     <h1 class="display-5">Insights and Moving Forward</h1>
   </div>
@@ -226,7 +247,7 @@
 <div class="content">
 
   <h4>Applying simplicity</h4>
-  <p>It is very easy to keep adding when designers start to brainstorm. So through this project, I learned how to stick to the original goal, clairify the needs and simplify the user flow. </p>
+  <p>It is very easy to keep adding when designers start to brainstorm. So through this project, I learned how to <strong>stick to the original goal, clairify the needs and simplify the user flow. </strong></p>
 
 </div>
   <hr>
@@ -250,7 +271,7 @@
     <div class="card-body">
       <h4 class="card-title">Journey</h4>
       <p class="card-text">A app designed for travellers to record and share their journey.</p>
-      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <p style="padding-top: 22px"> <small>UX . Prototype . Visual System</small></p>
     </div>
     <div class="card-footer">
       <a href="journey.html" class="card-link">Read more</a>
@@ -261,7 +282,7 @@
     <div class="card-body">
       <h4 class="card-title">Foodly</h4>
       <p class="card-text">A app encouraging people to live healthier through eating nutritious food.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p > <small>Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer">
       <a href="life.html" class="card-link">Read more</a>
@@ -272,7 +293,7 @@
     <div class="card-body">
       <h4 class="card-title">Fuzhou</h4>
       <p class="card-text">A website designed to preserve the dialect in Fuzhou, China.</p>
-      <p> <small>(Tools: Proto.io, Illustrator)</small></p>
+      <p style="padding-top: 22px"> <small>Research . UI . Prototype</small></p>
     </div>
     <div class="card-footer">
       <a href="fuzhou.html" class="card-link">Read more</a>
@@ -285,7 +306,7 @@
     <div class="card-body">
       <h4 class="card-title">Uber</h4>
       <p class="card-text">Redesign UI for multiple destinations.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+      <p> <small>UX . Design Thinking</small></p>
     </div>
     <div class="card-footer">
       <a href="uber.html" class="card-link">Read more</a>
@@ -296,7 +317,7 @@
     <div class="card-body">
       <h4 class="card-title">Split</h4>
       <p class="card-text">A visualized calculator for spliting bills.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+    
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
@@ -325,6 +346,7 @@
 <footer class="footer">
 
       <nav class="nav">
+        <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
         <a class="nav-link" href="design.html">Projects</a>
         <a class="nav-link" href="resume.html">Resume</a>
