--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <div id="selfIntro" class="brightcolor">
 
 
-      <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; width: 80%">
-        <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a multidiciplinary designer</h1>
+      <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; width: 68%">
+        <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate designer</h1>
         <p style="margin-top: 20px; font-size: 18px">to think from different perspectives | to design for users | to combine creativity and rationality <span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
       </div>
 
